fix for checkbox on mobile

--- a/_sass/components/forms.scss
+++ b/_sass/components/forms.scss
@@ -8,6 +8,7 @@ input[type="checkbox"] {
   padding: 0.50rem;
   border: 0.15rem solid var(--black);
   border-radius: 0.250rem;
+  cursor: pointer;
   touch-action: manipulation;
 }
 
@@ -16,6 +17,7 @@ input[type="checkbox"]::before {
   width: clamp(1.7rem, 2.2vw, 1.8rem);
   height: clamp(1.7rem, 2.2vw, 1.8rem);
   clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+  -webkit-clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
   transform: scale(0);
   background-color: var(--black);
 }
@@ -26,6 +28,10 @@ input[type="checkbox"]:checked::before {
 
 input[type="checkbox"]:hover {
   color: black;
+}
+
+input[type="checkbox"]:focus {
+  outline: 2px solid var(--black); /* Add focus accessibility */
 }
 
 .form {
