--- a/_sass/modules/_audit.scss
+++ b/_sass/modules/_audit.scss
@@ -36,7 +36,6 @@
 
         .item-text {
           color: inherit;
-          font-weight: bold;
           margin: 0;
         }
 
